--- a/CreativeCollabMusicalRecipes/CreativeCollabMusicalRecipes.csproj
+++ b/CreativeCollabMusicalRecipes/CreativeCollabMusicalRecipes.csproj
@@ -225,11 +225,20 @@
     <Compile Include="Migrations\202407282051568_AcademyDto.designer.cs">
       <DependentUpon>202407282051568_AcademyDto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202408020639156_collabration.cs" />
+    <Compile Include="Migrations\202408020639156_collabration.designer.cs">
+      <DependentUpon>202408020639156_collabration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202408020728394_MakeRecipeIdNullable.cs" />
+    <Compile Include="Migrations\202408020728394_MakeRecipeIdNullable.designer.cs">
+      <DependentUpon>202408020728394_MakeRecipeIdNullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Academy.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ViewModels\DetailsIngredient.cs" />
     <Compile Include="Models\ViewModels\DetailsInstruction.cs" />
+    <Compile Include="Models\ViewModels\DetailsLesson.cs" />
     <Compile Include="Models\ViewModels\EditIngredient.cs" />
     <Compile Include="Models\ViewModels\EditInstruction.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -351,7 +360,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\LessonData\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
@@ -401,6 +409,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202407282051568_AcademyDto.resx">
       <DependentUpon>202407282051568_AcademyDto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202408020639156_collabration.resx">
+      <DependentUpon>202408020639156_collabration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202408020728394_MakeRecipeIdNullable.resx">
+      <DependentUpon>202408020728394_MakeRecipeIdNullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
