--- a/CreativeCollabMusicalRecipes/CreativeCollabMusicalRecipes.csproj
+++ b/CreativeCollabMusicalRecipes/CreativeCollabMusicalRecipes.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Models\Lesson.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Recipe.cs" />
+    <Compile Include="Models\ViewModels\TotalsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
